--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -82,16 +82,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/temp_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableRight="@drawable/degrees"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:drawableLeft="@drawable/thermo"
-                    />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="City"
+                android:textSize="40dp"
+                android:layout_marginRight="20dp"
+                android:id="@+id/city_name"
+                />
+            <TextView
+                android:id="@+id/temp_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableRight="@drawable/degrees"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:drawableLeft="@drawable/thermo"
+                />
  <!--           <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
